2011-01-05  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/ggrid.R: added columnWidths option to size<- method. Pass in
	size value as list with this component

2011-01-04  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gaction.R: put in key.accel bit. Needs parent to be passed in.

	* R/aaaGenerics.R: update tooltip<- to newer GTK style

2010-12-14  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gdroplist.R: fix minimum column width under windows (15 was
	too narrow a minimum)

2010-12-02  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gtext.R (.addTags): put in check that we aren't redoing a text tag

2010-11-23  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gvarbrowser.R (updateCallback): replace idle handler with
	taskCallback for update. Seems much nicer, although possibly
	fragile as a  user can remove the callback too easily.

2010-11-10  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/glayout.R (as.gWidgetsRGtk2.GtkTable): New logic to handle
	expand, fill, anchor arguments when widget packed into
	gtkAlignment container

2010-11-09  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gbutton.R (as.gWidgetsRGtk2.GtkButton): put in
	gtkAlignmentWidget, along with combobox. Changes behaviour of
	layout, but implements fill= argument to add method of ggroup

2010-11-07  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gslider.R: packed in alignment widget

	* R/ggroup.R (as.gWidgetsRGtk2.GtkVBox <-
	as.gWidgetsRGtk2.GtkHBox): fixes to ".add" method and fill argument

2010-11-01  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/gslider.R (gsliderindex): changed so that one can use vector of
	orderable values. Pass to from argument initially.
	

2010-10-26  john verzani  <verzani@john-verzanis-macbook-pro.local>

	* R/glabel.R (addHandler): for glabel and gimage -- both use event