@@ -1,3 +1,8 @@
+2011-01-10  john verzani  <verzani@john-verzanis-macbook-pro.local>
+
+	* R/gdroplist.R (.as.gWidgetsRGtk2.gdroplist): [<- remembers where
+	it is (if possible) when we replace objects
+
 2011-01-05  john verzani  <verzani@john-verzanis-macbook-pro.local>
 
 	* R/ggrid.R: added columnWidths option to size<- method. Pass in
